syntax = "proto2";

message pb
{


	message GamerLoginC2S
	{
		optional string id     = 1;	//Íæ¼Òid
	}

	message GamerLoginS2C
	{
		optional string json = 1;//Êý¾Ý
	}
	
	message GamerGlobalChatC2S
	{
		optional string data   = 1; //
	}

	message GamerGlobalChatS2C
	{
		optional string data   = 1; //
	}
	
	message GamerChatC2S
	{
		optional string data   = 1; //
		optional string id = 2;
	}

	message GamerChatS2C
	{
		optional string data   = 1; //
		optional string fromId = 2;
	}

	optional GamerLoginC2S gamerLoginC2S = 1;
	optional GamerLoginS2C gamerLoginS2C = 2;
	optional GamerGlobalChatC2S gamerGlobalChatC2S = 3;
	optional GamerGlobalChatS2C gamerGlobalChatS2C = 4;
	optional GamerChatC2S gamerChatC2S = 5;
	optional GamerChatS2C gamerChatS2C = 6;
}